@@ -1,0 +1,2 @@
+#!/bin/sh
+./src/test-runner login-manual-previous-session test-gobject-greeter
