@@ -5,7 +5,8 @@ Overview of changes in lightdm 1.1.1
     * Update build system to find moc/uic
     * Fix non-distributed tests/src/lightdm-session
     * Fix X sessions with arguments in Exec not working
-    * Use previous session for automatic login users
+    * Use previous session for automatic login or if greeter does not request
+      one.
 
 Overview of changes in lightdm 1.1.0
 
